# wyuEngine-deprecated-

./: .gitignore  CMakeLists.txt  build.bat  build_windows.bat  readme.md
3Dtest/: CMakeLists.txt
3Dtest/asset/: imgui.ini
3Dtest/asset/level/: level1.json
3Dtest/asset/model/: tiny_4anim.x
3Dtest/asset/model/man/: DxViewer.ini
3Dtest/asset/model/player/: 00_body.x  01_head.x  02_armR.x  03_handR.x  04_armL.x  05_handL.x  06_legR.x  07_footR.x  motion.txt
3Dtest/asset/sounds/: SoundList.json
3Dtest/asset/texture/: skybox.x
3Dtest/configs/deployment/: setting.ini
3Dtest/configs/development/: setting.ini
3Dtest/include/: GameManager.h  GameScene.h  MenuScene.h  bullet.h  effect.h  enemy.h  main.h  player.h  sceneType.h
3Dtest/source/: GameManager.cpp  GameScene.cpp  bullet.cpp  effect.cpp  enemy.cpp  main.cpp  menuScene.cpp  player.cpp
LearnOpenGl/: CMakeLists.txt
LearnOpenGl/include/: main.h  shader.h
LearnOpenGl/shader/: shader.fs
LearnOpenGl/source/: main.cpp
engine/: CMakeLists.txt
engine/include/: ApplicationInterface.h  Camera.h  ConfigManager.h  D3D9Renderer.h  DirectInput.h  DirectSound.h  Frustum.h  GfxConfiguration.h  InputInterface.h  LogSystem.h  Node.h  Node2D.h  Node3D.h  PropertyScript.h  RenderInterface.h  Route.h  Scene.h  SceneManager.h  Script.h  SoundInterface.h  SoundManagerInterface.h  Timer.h  Token.h  WindowsApplication.h  XMesh.h  XStructures.h  defines.h  engine.h  gameEngine.h  light.h  material.h  objLoader.h  particle.h  structs.h
engine/include/math/: BoundingGeometry.h  MathDefines.h  Matrix.h  Physics.h  Plane.h  Polygon.h  Ray.h  Vector.h  common.h
engine/source/: Camera.cpp  ConfigManager.cpp  D3D9Renderer.cpp  DirectInput.cpp  DirectSound.cpp  Frustum.cpp  LogSystem.cpp  Node.cpp  Node2D.cpp  Node3D.cpp  PropertyScript.cpp  Route.cpp  SceneManager.cpp  Script.cpp  Token.cpp  WindowsApplication.cpp  XMesh.cpp  XStructures.cpp  gameEngine.cpp  objLoader.cpp  particle.cpp
engine/source/math/: BoundingGeometry.cpp  Plane.cpp  Polygon.cpp  Ray.cpp
