set(TARGET_NAME "LearnOpenGl")

file(GLOB GAME_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
file(GLOB GAME_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${GAME_HEADERS} ${GAME_SOURCES})

#set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS" )

add_executable(${TARGET_NAME} ${GAME_HEADERS} ${GAME_SOURCES})

target_link_libraries(${TARGET_NAME} Engine)
target_include_directories(${TARGET_NAME}
PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)


add_compile_definitions(ROOT_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
